--- a/src/styles/homepageStyle.css
+++ b/src/styles/homepageStyle.css
@@ -1,10 +1,4 @@
-.slider-container {
-    width: 100%;
-    height: 100%;
-    
-    /* Add this */
-    position:fixed;
-    top:0;
-    left:0;
-    
-    }
+img{
+    height: 100vh;
+
+}
