--- a/src/styles/aboutStyle.css
+++ b/src/styles/aboutStyle.css
@@ -3,6 +3,7 @@
     max-height: 400px;
     float: left;
     padding-right: 1%;
+    padding-bottom: 2%;
 }
 
 #aboutTXT{
@@ -16,6 +17,7 @@
     z-index: 10;
     margin-top: 50%;
     padding-left: 5%;
+    padding-bottom: 5%;
 }
 
 #AboutTitle{
