Project image appearance conflict fixed

--- a/src/styles/homepageStyle.css
+++ b/src/styles/homepageStyle.css
@@ -11,9 +11,9 @@
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23222' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 
 }
-     img{
+/* img{
     height: 100vh;
-}
+} */
 
 body {
     background-image: url("../photos/TEMPORARYBACKGROUND.jpg");
@@ -21,4 +21,4 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: cover
-}
+} 
