--- a/src/styles/projectsStyle.css
+++ b/src/styles/projectsStyle.css
@@ -5,8 +5,14 @@
     margin-left: 2%;
 }
 
+#projectsTABLE{
+    border:1px solid #234;
+}
   .column {
     margin: 2.5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .hovereffect {
