--- a/src/styles/processStyle.css
+++ b/src/styles/processStyle.css
@@ -10,6 +10,13 @@ height: 200%;
     padding-top: 2%;
     padding-bottom: 2%;
     margin-top: 10%;
+    font-size: 20px;
+}
+
+#ProcessTitle {
+    font-size:45px;
+    text-align: left;
+    padding-bottom: 2%;
 }
 
 #left{
