--- a/src/styles/reviewStyle.css
+++ b/src/styles/reviewStyle.css
@@ -20,7 +20,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: cover
+    background-size: cover;
 } 
 
 #reviews h2{
