removed gap in between homepage and about section

--- a/src/styles/homepageStyle.css
+++ b/src/styles/homepageStyle.css
@@ -20,5 +20,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: cover
+    background-size: cover;
+    margin-bottom: 100px;
 } 
