--- a/Frontend/src/styles/contactStyle.css
+++ b/Frontend/src/styles/contactStyle.css
@@ -9,6 +9,12 @@
 .contactInfo {
     font-size: 1.5rem;
 }
+
+#recapid{
+
+    visibility: hidden;
+}
+
 #Name {
     margin: 1rem;
     width: 500px;
@@ -27,7 +33,7 @@
 
 .Message {
       width: 500px;
-      height: 240px;
+      height: 175px;
       resize: none;
       margin-right: 2rem;
       
