--- a/Frontend/src/styles/contactStyle.css
+++ b/Frontend/src/styles/contactStyle.css
@@ -54,3 +54,9 @@
     margin-top: 1rem;
     margin-left: 1rem;
 }
+
+#goodMessage{
+    color:gray;
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
