--- a/Frontend/src/styles/contactStyle.css
+++ b/Frontend/src/styles/contactStyle.css
@@ -4,6 +4,7 @@
     padding-top: 2%;
     padding-left: 2%;
     padding-bottom: 2%;
+    margin-bottom: 10rem;
 }
 
 .contactInfo {
@@ -60,3 +61,4 @@
     margin-top: 1rem;
     margin-left: 1rem;
 }
+
