--- a/Frontend/src/styles/projectsStyle.css
+++ b/Frontend/src/styles/projectsStyle.css
@@ -8,6 +8,15 @@
     margin-left: 2%;
 }
 
+#slider1,#slider2,#slider3,#slider4{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 6.5%;
+
+  padding: 10px;
+  
+}
+
   .column {
     margin: 2.5%;
     display: block;
