Added status changer

--- a/Frontend/src/styles/adminStyle.css
+++ b/Frontend/src/styles/adminStyle.css
@@ -34,7 +34,13 @@
 #editSubmission input{
     margin: 1rem;
     width: 25rem;
+    
+}
 
+#editSubmission select{
+    margin: 1rem;
+    padding: 0.7rem;
+    width: 25rem;
     
 }
 
