edited admin login button hitbox to fit size of text

--- a/Frontend/src/styles/footerStyle.css
+++ b/Frontend/src/styles/footerStyle.css
@@ -3,9 +3,14 @@
     padding-bottom: 5px;
     margin: 0;
     background-color: white;
+    
 }
 
 #adminLogin:hover {
     cursor: pointer;
     color: grey;
+}
+
+#adminLogin {
+    display:inline-flex;
 }
