--- a/Frontend/src/styles/adminStyle.css
+++ b/Frontend/src/styles/adminStyle.css
@@ -1,16 +1,17 @@
-#firstTable{
-    border-style: solid;
+#firstTable, #sortedTable{
+    border-style: none;
+    border-spacing: 0ch;
     padding:2rem;
     margin-top: 2rem;
 }
 
-#firstTable tr td{
+#firstTable tr td, #sortedTable tr td{
     border-style: solid;
     padding: 10px;
 
 }
 
-#firstTable th {
+#firstTable th, #sortedTable th {
     padding: 10px;
     border-style: solid;
 }
