Added Language selection option
Different website language options.
Supported languages: English, Serbian.

--- a/Frontend/src/styles/headerStyle.css
+++ b/Frontend/src/styles/headerStyle.css
@@ -32,7 +32,7 @@ header {
     cursor: pointer;
 }
 
-#languageSelect {
+.languageSelect {
     padding-right:0.3%;
 }
 
@@ -52,4 +52,9 @@ li {
 li:hover {
     cursor: pointer;
     color: white;
+}
+
+#ignoreLS{
+    cursor: default;
+    color: gray;
 }
